k8s/kind_cwxstat/ingressO.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-ingress
spec:
  rules:
  - http:
      paths:
      - path: /cwxstat
        backend:
          serviceName: node-service
          servicePort: 3000
